# AI-Powered-Insurance-Policy-Information-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config_logging.py  main.py
app/db/: pinecone_db.py  utils.py
app/model/: agent.py  history.py  tool_list.py
app/pages/: admin.py
data/document/: preamble.txt
data/json/: history.json
